@@ -1,49 +1,56 @@
 package test.configuration;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.testng.Assert;
 import org.testng.TestNG;
+import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
 
 public class GroupsTest {
+  
+  private TestNG m_testNg;
+  
+  @BeforeMethod
+  public void setUp() {
+    m_testNg = new TestNG();
+    m_testNg.setVerbose(0);
+  }
 
   @Test
   public void verifyDataProviderAfterGroups() {
-    TestNG tng = new TestNG();
-    tng.setTestClasses(new Class[] { 
-        ConfigurationGroupDataProviderSampleTest.class 
-    });
-    tng.setVerbose(0);
-    tng.run();
-    
-    List<Integer> l = ConfigurationGroupDataProviderSampleTest.m_list;
-    Assert.assertEquals(l.size(), 5);
-    int i = 0;
-    Assert.assertEquals(1, l.get(i++).intValue());
-    Assert.assertEquals(2, l.get(i++).intValue());
-    Assert.assertEquals(2, l.get(i++).intValue());
-    Assert.assertEquals(2, l.get(i++).intValue());
-    Assert.assertEquals(3, l.get(i++).intValue());
+    runTest(ConfigurationGroupDataProviderSampleTest.class, 
+        ConfigurationGroupDataProviderSampleTest.m_list,
+        Arrays.asList(new Integer[] {
+            1, 2, 2, 2, 3
+      }));
   }
   
   @Test
   public void verifyParametersAfterGroups() {
-    TestNG tng = new TestNG();
-    tng.setTestClasses(new Class[] { 
-        ConfigurationGroupInvocationCountSampleTest.class 
-    });
-    tng.setVerbose(0);
-    tng.run();
-    
-    List<Integer> l = ConfigurationGroupInvocationCountSampleTest.m_list;
-    Assert.assertEquals(l.size(), 5);
-    int i = 0;
-    Assert.assertEquals(1, l.get(i++).intValue());
-    Assert.assertEquals(2, l.get(i++).intValue());
-    Assert.assertEquals(2, l.get(i++).intValue());
-    Assert.assertEquals(2, l.get(i++).intValue());
-    Assert.assertEquals(3, l.get(i++).intValue());
+    runTest(ConfigurationGroupInvocationCountSampleTest.class, 
+        ConfigurationGroupInvocationCountSampleTest.m_list,
+        Arrays.asList(new Integer[] {
+            1, 2, 2, 2, 3
+      }));
   }
 
+  @Test
+  public void verifyBothAfterGroups() {
+    runTest(ConfigurationGroupBothSampleTest.class, 
+        ConfigurationGroupBothSampleTest.m_list,
+        Arrays.asList(new Integer[] {
+          1, 2, 2, 2, 2, 2, 2, 3
+      }));
+  }
+  
+  private void runTest(Class cls, List<Integer> list, List<Integer> expected) {
+      m_testNg.setTestClasses(new Class[] { 
+          cls 
+      });
+      m_testNg.run();
+      
+      Assert.assertEquals(list, expected);
+  }
 }
