@@ -23,6 +23,7 @@
     <parameter name="source-directory" value="test/src/test/converter" />
       <class name="test.thread.ParallelTestTest" />
       <class name="test.annotationtransformer.AnnotationTransformerSampleTest" />
+      <class name="test.reports.ReportTest" />
 -->
     <classes>
       <class name="test.configuration.GroupsTest" />
