@@ -2,7 +2,9 @@
 ===========================================================================
 5.3
 
+Fixed: Forgot to account for cases where both invocationCount and DataProviders are present
 Fixed: AfterGroups were invoked out of order with invocationCount and DataProviders
+Fixed: Reporter.getOutput() returned an empty array if a timeOut was specified
 Added: testng.xml now supports <suite-files>
 Added: ant task can receive several listeners
 Fixed: TESTNG-109 Skipped tests with expected exceptions are reported as failures
